Note passed as a parameter